[package]
name = "uruntime"
version = "0.0.1"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/uruntime"
description = "Universal RunImage and AppImage runtime with SquashFS and DwarFS supports"
edition = "2021"

[profile.release]
lto = true
debug  = false
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.dev]
opt-level = 0

[features]
default = [
    "dwarfs",
    "squashfs",
]
dwarfs = []
squashfs = []
appimage = []
pie-ulexec = ["dep:userland-execve"]

[build-dependencies]
indexmap = "2.6.0"

[dependencies]
which = "6.0.3"
cfg-if = "1.0.0"
goblin = "0.9.0"
num_cpus = "1.16.0"
memfd-exec = "0.2.1"
signal-hook = "0.3.17"
userland-execve = { version = "0.2.0", optional = true }
nix = { version = "0.29.0", features = [ "fs", "signal" ] }
