[package]
name = "uruntime"
version = "0.3.9"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/uruntime"
description = "Universal RunImage and AppImage runtime with SquashFS and DwarFS supports"
edition = "2021"

[profile.release]
lto = true
debug  = false
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.dev]
opt-level = 0

[features]
default = [
    "dwarfs",
    "squashfs",
]
upx = []
lite = []
dwarfs = []
squashfs = []
appimage = []

[build-dependencies]
cfg-if = "1.0.0"
indexmap = "2.6.0"
zstd = { version = "0.13.3", default-features = false }

[dependencies]
which = "7.0.0"
cfg-if = "1.0.0"
goblin = "0.9.0"
procfs = "0.17.0"
num_cpus = "1.16.0"
signal-hook = "0.3.17"
zstd = { version = "0.13.3", default-features = false }
nix = { version = "0.29.0", features = [ "fs", "signal" ] }
xxhash-rust = { version = "0.8.15", features = [ "xxh3" ] }
memfd-exec = { git = "https://github.com/VHSgunzo/memfd-exec.git" }
